# whisper-push

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.toml  install.sh  installer.sh  pyproject.toml  setup-hotkey.sh  uninstall.sh  whisper-push  whisper-push-macos.py  whisper-push.desktop  whisper-push.py  whisper_push.py
.claude/skills/correction-test/: SKILL.md
.claude/skills/onboarding-design/: SKILL.md
.claude/skills/rust-backend-review/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/whisper-push-acoustic/: Cargo.toml
crates/whisper-push-acoustic/examples/: acoustic_eval.rs
crates/whisper-push-acoustic/src/: lib.rs
crates/whisper-push-dict/: Cargo.toml
crates/whisper-push-dict/data/: common_en.txt  common_fr.txt
crates/whisper-push-dict/examples/: dict_eval.rs
crates/whisper-push-dict/fixtures/: finalize.jsonl  learn.jsonl  learn.jsonl.out
crates/whisper-push-dict/src/: compiled.rs  finalize.rs  learn.rs  lib.rs  model.rs  normalize.rs  phonetic.rs
crates/whisper-push-dict/tests/: golden.rs
docs/: PAYWALL.md  adaptive-dictation-plan.md  correction-gold-standard-spec.md  mobile-cloud-plan.md
macos/: README.md  build-dmg.sh  entitlements.plist  install.sh  menubar-daemon.py  uninstall.sh  whisper-push.icns  whisper-push.spec
macos/Onboarding/: Package.swift
macos/Onboarding/.build/: build.db  release.yaml
macos/Onboarding/.build/arm64-apple-macosx/release/: Onboarding  description.json
macos/Onboarding/.build/arm64-apple-macosx/release/ModuleCache/16FE8S6R1GMN7/: Accessibility-1R7T8OFAXDRZ2.pcm  ApplicationServices-3NC7PVY4GJCXR.pcm  CFNetwork-1LQ2KCFGYMTBG.pcm  CUPS-A3NZR96S8GTH.pcm  ColorSync-1IRB7SN4PYBWF.pcm  CoreData-3RJIXLGQEPG0M.pcm  CoreFoundation-YYJ9RAJY1SHU.pcm  CoreGraphics-1HCI17F8IWTUW.pcm  CoreImage-1A9B2JWVC4VET.pcm  CoreText-3H0296TJIDR4X.pcm  CoreTransferable-19FONCKHSZEJJ.pcm  CoreVideo-MFS75FHEGAM.pcm  DataDetection-ZTY2CJ1SXGZX.pcm  DeveloperToolsSupport-3SK5EI94FZFBG.pcm  DiskArbitration-V3QLSZJ4LQ9U.pcm  Dispatch-2RHP2FXWTH678.pcm  IOSurface-1O84PQXB15WDJ.pcm  ImageIO-O28NEJFCOUOT.pcm  MachO-VN03BDYR1JSW.pcm  Metal-1WOJHKMMTJ6TS.pcm  OSLog-1L74SGWXD1IPP.pcm  ObjectiveC-2D9QRW0KPAMMM.pcm  OpenGL-8452ZA8CEJLZ.pcm  QuartzCore-2Z9C4D8VAJ5I9.pcm  Security-QHJXGYYDCL9F.pcm  Spatial-20I3F1W6HX3V3.pcm  SwiftShims-JX1COEH18DAN.pcm  SwiftUI-1AAAYWFS9HMHI.pcm  SwiftUICore-1EETY4BD0V742.pcm  Symbols-1W8NQQUV3Z9ZV.pcm  UniformTypeIdentifiers-2NKX6626FZIUE.pcm  XPC-B2LPRIM2DE0P.pcm  _AvailabilityInternal-277JJZJIHJPZF.pcm  _Builtin_float-1L1O58CTK9GFM.pcm  _Builtin_intrinsics-1L1O58CTK9GFM.pcm  _Builtin_inttypes-1L1O58CTK9GFM.pcm  _Builtin_limits-1L1O58CTK9GFM.pcm  _Builtin_stdarg-1L1O58CTK9GFM.pcm  _Builtin_stdatomic-1L1O58CTK9GFM.pcm  _Builtin_stdbool-1L1O58CTK9GFM.pcm  (+17 more)
macos/Onboarding/.build/arm64-apple-macosx/release/ModuleCache/2OSRVU3JBYTLE/: Accessibility-1R7T8OFAXDRZ2.pcm  ApplicationServices-3NC7PVY4GJCXR.pcm  CFNetwork-1LQ2KCFGYMTBG.pcm  CUPS-A3NZR96S8GTH.pcm  ColorSync-1IRB7SN4PYBWF.pcm  CoreData-3RJIXLGQEPG0M.pcm  CoreFoundation-YYJ9RAJY1SHU.pcm  CoreGraphics-1HCI17F8IWTUW.pcm  CoreImage-1A9B2JWVC4VET.pcm  CoreText-3H0296TJIDR4X.pcm  CoreTransferable-19FONCKHSZEJJ.pcm  CoreVideo-MFS75FHEGAM.pcm  DataDetection-ZTY2CJ1SXGZX.pcm  DeveloperToolsSupport-3SK5EI94FZFBG.pcm  DiskArbitration-V3QLSZJ4LQ9U.pcm  Dispatch-2RHP2FXWTH678.pcm  IOSurface-1O84PQXB15WDJ.pcm  ImageIO-O28NEJFCOUOT.pcm  MachO-VN03BDYR1JSW.pcm  Metal-1WOJHKMMTJ6TS.pcm  OSLog-1L74SGWXD1IPP.pcm  ObjectiveC-2D9QRW0KPAMMM.pcm  OpenGL-8452ZA8CEJLZ.pcm  QuartzCore-2Z9C4D8VAJ5I9.pcm  Security-QHJXGYYDCL9F.pcm  Spatial-20I3F1W6HX3V3.pcm  SwiftShims-JX1COEH18DAN.pcm  SwiftUI-1AAAYWFS9HMHI.pcm  SwiftUICore-1EETY4BD0V742.pcm  Symbols-1W8NQQUV3Z9ZV.pcm  UniformTypeIdentifiers-2NKX6626FZIUE.pcm  XPC-B2LPRIM2DE0P.pcm  _AvailabilityInternal-277JJZJIHJPZF.pcm  _Builtin_float-1L1O58CTK9GFM.pcm  _Builtin_intrinsics-1L1O58CTK9GFM.pcm  _Builtin_inttypes-1L1O58CTK9GFM.pcm  _Builtin_limits-1L1O58CTK9GFM.pcm  _Builtin_stdarg-1L1O58CTK9GFM.pcm  _Builtin_stdatomic-1L1O58CTK9GFM.pcm  _Builtin_stdbool-1L1O58CTK9GFM.pcm  (+17 more)
macos/Onboarding/.build/arm64-apple-macosx/release/ModuleCache/4AB06XRAKXY5/: ApplicationServices-3NC7PVY4GJCXR.pcm  CFNetwork-1LQ2KCFGYMTBG.pcm  CUPS-A3NZR96S8GTH.pcm  ColorSync-1IRB7SN4PYBWF.pcm  CoreFoundation-YYJ9RAJY1SHU.pcm  CoreGraphics-1HCI17F8IWTUW.pcm  MachO-VN03BDYR1JSW.pcm  (+37 more)
macos/Onboarding/.build/arm64-apple-macosx/release/Modules/: Onboarding.swiftdoc  Onboarding.swiftmodule  Onboarding.swiftsourceinfo
macos/Onboarding/.build/arm64-apple-macosx/release/Onboarding.build/: Onboarding.d  output-file-map.json  sources
macos/Onboarding/.build/arm64-apple-macosx/release/Onboarding.product/: Objects.LinkFileList
macos/Onboarding/Sources/: CheckoutView.swift  DownloadView.swift  LicenseView.swift  ModelPickerView.swift  OnboardingApp.swift  OnboardingState.swift  PermissionsView.swift  ReadyView.swift  Theme.swift  WelcomeView.swift
packaging/homebrew/: whisper-push.rb
packaging/linux/: whisper-push.desktop
resources/: AppIcon.icns  Info.plist  Onboarding-Info.plist  entitlements.plist
resources/pkg-scripts/: postinstall
scripts/: install.sh
src/: acoustic.rs  autostart.rs  config.rs  dictionary.rs  enrich.rs  hardware.rs  history.rs  lib.rs  license.rs  main.rs  model_manager.rs  notify.rs  onboarding.rs  overlay.rs  permissions.rs  report.rs  state.rs  templates.rs  util.rs
src/audio/: capture.rs  decode.rs  mod.rs  playback.rs  stream.rs
src/hotkey/: linux.rs  macos.rs  mod.rs  windows.rs
src/paste/: mod.rs
src/transcribe/: mod.rs  parakeet.rs  voxtral_api.rs  voxtral_local.rs
src/tray/: mod.rs
src/updater/: install.rs  mod.rs
tests/: e2e-updater.sh  e2e.sh  hardware_tests.rs  integration.rs  test_full_pipeline.rs  test_mic.rs  test_stream.rs  test_streaming_vs_batch.rs  test_voxtral.rs  test_voxtral_backend.rs  test_voxtral_streaming.rs  transcription_tests.rs  unit_tests.rs  updater_tests.rs
tests/fixtures/: github_release.json
tools/: ls_ids.sh  test_correction.sh
wix/: main.wxs
(+3 files in other folders)
