[package]
name = "whisper-push"
version = "2.0.0"
edition = "2024"
description = "Push-to-talk voice dictation, 100% local. Hold a key, speak, release — your words are typed wherever your cursor is."
license = "MIT"
repository = "https://github.com/Remenby31/whisper-push"
categories = ["multimedia::audio", "accessibility"]
keywords = ["whisper", "dictation", "speech-to-text", "push-to-talk"]

[features]
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
voxtral = ["dep:voxtral-mini-realtime", "dep:burn"]
parakeet = ["dep:parakeet-rs"]

[dependencies]
# Audio capture & playback
cpal = "0.15"
rubato = "0.16"
hound = "3.5"            # WAV read for embedded sounds
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "flac", "aac"] }  # decode audio files

# Transcription
whisper-rs = "0.16"
voxtral-mini-realtime = { path = "../voxtral-mini-realtime-rs", default-features = false, features = ["wgpu", "native-tokenizer"], optional = true }
parakeet-rs = { version = "0.3", optional = true }
burn = { version = "0.20", default-features = false, features = ["wgpu"], optional = true }

# Model download
hf-hub = "0.4"
# indicatif removed — conflicts with burn's ratatui dep

# Hotkey
enigo = "0.3"            # Cross-platform keystroke simulation (paste)

# Clipboard
arboard = "3"

# System tray + event loop
tray-icon = "0.19"
muda = "0.16"
winit = "0.30"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

# Icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Notifications
notify-rust = "4"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async / threading
crossbeam-channel = "0.5"

# Single instance
fs4 = "0.12"

# Error handling
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSThread", "NSDate", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSRunningApplication",
    "NSWorkspace",
    "NSImage",
    "NSStatusBar",
    "NSStatusItem",
    "block2",
] }
block2 = "0.6"
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGRemoteOperation"] }
core-foundation = { version = "0.10", features = ["mac_os_10_7_support"] }
core-graphics = "0.24"
core-foundation-sys = "0.8"
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"          # Optimize for size (binary stays small)
