[package]
name = "whisper-push"
version = "0.1.0-beta.0"
edition = "2024"
authors = ["Whisper Push contributors <hello@whisperpush.com>"]
description = "Push-to-talk voice dictation, 100% local. Hold a key, speak, release — your words are typed wherever your cursor is."
license = "MIT"
repository = "https://github.com/Remenby31/whisper-push"
homepage = "https://whisperpush.com"
categories = ["multimedia::audio", "accessibility"]
keywords = ["whisper", "dictation", "speech-to-text", "push-to-talk"]

[features]
default = ["voxtral", "parakeet", "metal"]
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
voxtral = ["dep:voxtral-mini-realtime", "dep:burn"]
parakeet = ["dep:parakeet-rs"]

[dependencies]
# Audio capture & playback
cpal = "0.15"
rubato = "0.16"
hound = "3.5"            # WAV read for embedded sounds
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "flac", "aac"] }  # decode audio files

# Transcription
whisper-rs = "0.16"
voxtral-mini-realtime = { git = "https://github.com/TrevorS/voxtral-mini-realtime-rs", tag = "v0.2.5", default-features = false, features = ["wgpu", "native-tokenizer"], optional = true }
parakeet-rs = { version = "0.3", optional = true }
burn = { version = "0.20", default-features = false, features = ["wgpu"], optional = true }

# Model download
hf-hub = "0.4"
# indicatif removed — conflicts with burn's ratatui dep

# Hotkey
enigo = "0.3"            # Cross-platform keystroke simulation (paste)

# Clipboard
arboard = "3"

# System tray + event loop
# Bumped to fix the macOS Tahoe submenu hover-close bug present in muda 0.16.
tray-icon = "0.24"
muda = "0.19"
winit = "0.30"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "6"

# Icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Notifications
notify-rust = "4"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async / threading
crossbeam-channel = "0.5"

# Single instance
fs4 = "0.12"

# Error handling
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSThread", "NSDate", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSRunningApplication",
    "NSWorkspace",
    "NSImage",
    "NSStatusBar",
    "NSStatusItem",
    "block2",
] }
block2 = "0.6"
objc2-core-graphics = { version = "0.3", default-features = false, features = ["std", "CGEvent", "CGRemoteOperation"] }
core-foundation = { version = "0.10", features = ["mac_os_10_7_support"] }
core-graphics = "0.24"
core-foundation-sys = "0.8"
# `default-features = false`: objc2-core-foundation's default set pulls
# `dispatch2`, whose generated bitflags macro blows past the default rustc
# macro recursion limit (128) and breaks every macOS CI job. We only need
# `CFRunLoop` here, so opt out of defaults and re-enable just `std` + that.
# (arboard and muda also depend on OCF but already use default-features = false.)
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFRunLoop"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[[bin]]
name = "whisper-push-test"
path = "src/bin/test_harness.rs"

[[test]]
name = "transcription_tests"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

# ─── Packaging ────────────────────────────────────────────────────────────────

# Linux: cargo-deb (https://github.com/kornelski/cargo-deb) — produces a .deb
# from these metadata. Generated with `cargo deb --no-build` (binary is built
# separately in CI). Depends-list reflects the runtime system libraries.
[package.metadata.deb]
maintainer = "Whisper Push <hello@whisperpush.com>"
copyright = "2026, Whisper Push contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
Push-to-talk voice dictation, 100% local. Hold a key, speak, release —
your words are typed wherever your cursor is. Three transcription engines
(Whisper, Parakeet, Voxtral), every platform optimized, no cloud."""
section = "sound"
priority = "optional"
depends = "libasound2, libgtk-3-0, libglib2.0-0, libxdo3, libxkbcommon0, libwayland-client0"
assets = [
    ["target/release/whisper-push", "usr/bin/", "755"],
    ["packaging/linux/whisper-push.desktop", "usr/share/applications/", "644"],
    ["packaging/linux/whisper-push.png", "usr/share/icons/hicolor/256x256/apps/whisper-push.png", "644"],
    ["README.md", "usr/share/doc/whisper-push/README", "644"],
]

# Windows: cargo-wix (https://github.com/volks73/cargo-wix) — produces an MSI.
# The wix/main.wxs template is generated with `cargo wix init` then committed.
[package.metadata.wix]
upgrade-guid = "8B7E1C2D-3F4A-4B5C-9D6E-7F8A9B0C1D2E"
path-guid    = "9C8F2D3E-4A5B-4C6D-AE7F-8B9C0D1E2F30"
license = "LICENSE"
eula = false
