[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-push"
version = "1.0.0"
description = "Push-to-talk voice dictation using faster-whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "whisper-push"}
]
keywords = ["whisper", "voice", "dictation", "transcription", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
# Linux with NVIDIA GPU
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
# macOS packaging
macos = [
    "pyinstaller>=6.0",
]

[project.scripts]
whisper-push = "whisper_push:main"

[project.urls]
Homepage = "https://github.com/whisper-push/whisper-push"
Repository = "https://github.com/whisper-push/whisper-push"

[tool.setuptools]
py-modules = ["whisper_push"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["sounds/*.wav", "*.toml", "*.svg"]
